--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation 'com.lemmingapex.trilateration:trilateration:1.0.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
