--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.lemmingapex.trilateration:trilateration:1.0.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation project(path: ':library')
 }
